--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -37,11 +37,15 @@
         app:layout_constraintStart_toEndOf="@+id/textViewHi"
         app:layout_constraintTop_toTopOf="parent" />
 
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="358dp"
-        android:layout_height="462dp"
+        android:layout_height="0dp"
         android:layout_marginVertical="20dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.615"
@@ -51,8 +55,9 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
+            android:paddingBottom="30dp"
             android:layout_marginVertical="20dp">
 
             <Button
@@ -63,7 +68,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/light_gray_border"
                 android:drawableRight="@drawable/ic_past_diagnoses"
-                android:padding="20dp"
+                android:paddingHorizontal="20dp"
                 android:text="@string/past_diagnoses_button"
                 android:textColor="@color/rich_black_80"
                 android:textSize="20sp"
@@ -127,7 +132,7 @@
 
 
     </ScrollView>
-
+<!--    </LinearLayout>-->
 <!--    <TextView-->
 <!--        android:id="@+id/textViewFragmentFirst"-->
 <!--        android:layout_width="wrap_content"-->
