--- a/app/src/main/res/layout/diagnosis_fragment.xml
+++ b/app/src/main/res/layout/diagnosis_fragment.xml
@@ -82,7 +82,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewDiagnosisDoctorProfession" />
@@ -109,7 +109,7 @@
             android:textAlignment="viewStart"
             android:textAllCaps="false"
             android:textColor="@color/rich_black_80"
-            android:textSize="16sp"/>
+            android:textSize="16dp"/>
 
     </ScrollView>
 
@@ -122,7 +122,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewDiagnosisTitle" />
 
@@ -158,7 +158,7 @@
         android:text="@string/prescription"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="14sp"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewDiagnosisTitle" />
 
