--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -67,7 +67,7 @@
                 android:paddingVertical="5dp"
                 android:text="@string/past_diagnoses_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
@@ -83,7 +83,7 @@
                 android:padding="20dp"
                 android:text="@string/prescriptions_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
@@ -100,7 +100,7 @@
                 android:paddingVertical="5dp"
                 android:text="@string/view_appointments_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
@@ -117,7 +117,7 @@
                 android:paddingVertical="5dp"
                 android:text="@string/schedule_appointment_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
