--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -167,7 +167,7 @@
         app:layout_constraintStart_toEndOf="@+id/textViewHi"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--    <LinearLayout-->
+<!-    <LinearLayout-->
     <!--        android:layout_width="match_parent"-->
     <!--        android:layout_height="match_parent">-->
 <!--    <ScrollView-->
