--- a/app/src/main/res/layout/professions_fragment.xml
+++ b/app/src/main/res/layout/professions_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_background"
+    android:background="@drawable/ic_background_group"
     tools:context=".fragments.ProfessionsFragment">
 
 
