--- a/app/src/main/res/layout/prescriptions_list_fragment.xml
+++ b/app/src/main/res/layout/prescriptions_list_fragment.xml
@@ -40,18 +40,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPrescriptions"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_prescriptions_container"
         android:layout_width="358dp"
         android:layout_height="462dp"
-        android:layout_marginVertical="20dp"
-        android:background="@drawable/light_gray_border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.765" />
-
+        app:layout_constraintVertical_bias="0.765">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvPrescriptions"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="20dp"
+            android:background="@drawable/light_gray_border" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
