--- a/app/src/main/res/layout/credits_fragment.xml
+++ b/app/src/main/res/layout/credits_fragment.xml
@@ -9,9 +9,9 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:background="@color/mandarin_22"
+        android:layout_width="411dp"
+        android:layout_height="658dp"
+        android:background="@drawable/ic_rectangles_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,21 +40,21 @@
         android:gravity="center_vertical"
         android:text="@string/developed_by"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <TextView
         android:id="@+id/tv_team_members"
-        android:layout_width="358dp"
-        android:layout_height="270dp"
+        android:layout_width="365dp"
+        android:layout_height="326dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="324dp"
         android:fontFamily="@font/poppins"
         android:textAlignment="center"
         android:textColor="@color/rich_black_80"
-        android:textSize="17sp"
+        android:textSize="17dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:id="@+id/btBack"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/mandarin_border_12dp"
         android:drawableStart="@drawable/ic_back_arrow"
