--- a/app/src/main/res/layout/appointments_fragment.xml
+++ b/app/src/main/res/layout/appointments_fragment.xml
@@ -22,7 +22,7 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
