--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -23,7 +23,8 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,7 +95,7 @@
         android:text="@string/confirm"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:enabled="false"
         app:layout_constraintBottom_toTopOf="@+id/viewCalendarBackground"
         app:layout_constraintEnd_toEndOf="parent"
