--- a/app/src/main/res/layout/diagnoses_list_fragment.xml
+++ b/app/src/main/res/layout/diagnoses_list_fragment.xml
@@ -22,7 +22,8 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="15sp"
+        android:textSize="15dp"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
