--- a/app/src/main/res/layout/diagnosis_fragment.xml
+++ b/app/src/main/res/layout/diagnosis_fragment.xml
@@ -22,7 +22,8 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,7 +69,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toTopOf="@+id/LinearLayoutPrescription" />
@@ -136,7 +137,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewDiagnosisDoctor" />
 
