--- a/app/src/main/res/layout/item_diagnosis.xml
+++ b/app/src/main/res/layout/item_diagnosis.xml
@@ -33,7 +33,7 @@
             android:paddingTop="2dp"
             android:textAlignment="center"
             android:textColor="@color/rich_black_90"
-            android:textSize="16sp"
+            android:textSize="16dp"
             tools:text="@string/date" />
 
         <TextView
