--- a/app/src/main/res/layout/item_profession.xml
+++ b/app/src/main/res/layout/item_profession.xml
@@ -34,7 +34,7 @@
             android:paddingTop="5dp"
             android:textAlignment="center"
             android:textColor="@color/rich_black_90"
-            android:textSize="16sp"
+            android:textSize="16dp"
             tools:text="@string/specialty" />
 
 
