--- a/app/src/main/res/layout/medication_item.xml
+++ b/app/src/main/res/layout/medication_item.xml
@@ -36,7 +36,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageViewMedicine"
         app:layout_constraintTop_toTopOf="@+id/LinearLayoutPrescription" />
@@ -50,7 +50,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="14sp"
+        android:textSize="14dp"
         app:layout_constraintStart_toEndOf="@+id/imageViewMedicine"
         app:layout_constraintTop_toBottomOf="@+id/textViewMedicineTitle" />
 
@@ -63,7 +63,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="14sp"
+        android:textSize="14dp"
         app:layout_constraintStart_toEndOf="@+id/imageViewMedicine"
         app:layout_constraintTop_toBottomOf="@+id/textViewDosage" />
 
