--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -9,9 +9,9 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:background="@color/mandarin_22"
+        android:layout_width="405dp"
+        android:layout_height="625dp"
+        android:background="@drawable/ic_rectangles_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/fullNameDescription"
@@ -82,7 +82,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -109,7 +109,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/amkaDescription"
@@ -122,7 +122,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -149,7 +149,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/bloodTypeDescription"
@@ -162,7 +162,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -189,7 +189,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/familyDoctorDescription"
@@ -202,7 +202,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
