--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -9,9 +9,9 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:background="@color/mandarin_22"
+        android:layout_width="405dp"
+        android:layout_height="621dp"
+        android:background="@drawable/ic_rectangles_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
             <Button
                 android:id="@+id/creditsButton"
@@ -71,7 +71,7 @@
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
             <Button
                 android:id="@+id/logoutButton"
@@ -86,7 +86,7 @@
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
 
         </LinearLayout>
