--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonConfirmation" />
 
     <TextView
-        android:id="@+id/textViewDoctor"
+        android:id="@+id/textViewHint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -67,14 +67,14 @@
         app:layout_constraintTop_toTopOf="@+id/viewCalendarBackground" />
 
     <View
-        android:id="@+id/viewCalendarBorders"
+        android:id="@+id/viewBorders"
         android:layout_width="320dp"
         android:layout_height="280dp"
         android:layout_margin="16dp"
         android:background="@drawable/white_border"
         app:layout_constraintEnd_toEndOf="@+id/viewCalendarBackground"
         app:layout_constraintStart_toStartOf="@+id/viewCalendarBackground"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDoctor" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewHint" />
 
     <TextView
         android:id="@+id/textViewDoctorName"
@@ -89,8 +89,8 @@
         android:textColor="@color/rich_black_80"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBorders"
-        app:layout_constraintTop_toTopOf="@+id/viewCalendarBorders"
+        app:layout_constraintStart_toStartOf="@+id/viewBorders"
+        app:layout_constraintTop_toTopOf="@+id/viewBorders"
         tools:text="@string/doctor_name" />
 
     <TextView
@@ -103,7 +103,7 @@
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBorders"
+        app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewDoctorName" />
 
     <TextView
@@ -119,7 +119,7 @@
         android:textColor="@color/rich_black_80"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBorders"
+        app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewDoctorSpecialty" />
 
     <TextView
@@ -132,7 +132,7 @@
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBorders"
+        app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewHospitalName" />
 
     <TextView
@@ -148,7 +148,7 @@
         android:textColor="@color/rich_black_80"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBorders"
+        app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewHospitalLocation" />
 
     <TextView
@@ -161,7 +161,7 @@
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBorders"
+        app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
 
     <Button
@@ -175,10 +175,10 @@
         android:textColor="@color/rich_black_80"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBackground"
-        app:layout_constraintEnd_toEndOf="@+id/viewCalendarBorders"
+        app:layout_constraintEnd_toEndOf="@+id/viewBorders"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonCancel"
-        app:layout_constraintTop_toBottomOf="@+id/viewCalendarBorders" />
+        app:layout_constraintTop_toBottomOf="@+id/viewBorders" />
 
     <Button
         android:id="@+id/buttonCancel"
@@ -192,7 +192,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBackground"
         app:layout_constraintEnd_toStartOf="@+id/buttonConfirmAppointment"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/viewCalendarBorders"
-        app:layout_constraintTop_toBottomOf="@+id/viewCalendarBorders" />
+        app:layout_constraintStart_toStartOf="@+id/viewBorders"
+        app:layout_constraintTop_toBottomOf="@+id/viewBorders" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
