--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -53,12 +53,6 @@
         android:label="Diagnoses List"
         tools:layout="@layout/diagnoses_list_fragment" />
 
-    <!--    <fragment-->
-    <!--        android:id="@+id/navigation_diagnosis"-->
-    <!--        android:name="com.devsoncall.okdoc.fragments.DiagnosisFragment"-->
-    <!--        android:label="Diagnosis"-->
-    <!--        tools:layout="@layout/diagnosis_fragment" />-->
-
     <fragment
         android:id="@+id/navigation_professions"
         android:name="com.devsoncall.okdoc.fragments.ProfessionsFragment"
@@ -99,6 +93,12 @@
         android:name="com.devsoncall.okdoc.fragments.ConfirmationFragment"
         android:label="confirmation_fragment"
         tools:layout="@layout/confirmation_fragment" />
+
+    <fragment
+        android:id="@+id/navigation_confirmed"
+        android:name="com.devsoncall.okdoc.fragments.ConfirmedFragment"
+        android:label="confirmed_fragment"
+        tools:layout="@layout/confirmed_fragment" />
 
 
 </navigation>
