add error fragment ui and avatar change
- add error fragment
- add male avatar
- change avatar based on gender (last amka digit) in home fragment and profile fragment
- add utils package
- add avatar change fun to utils
- add date string format to utils

--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -100,5 +100,11 @@
         android:label="confirmed_fragment"
         tools:layout="@layout/confirmed_fragment" />
 
+    <fragment
+        android:id="@+id/navigation_error"
+        android:name="com.devsoncall.okdoc.fragments.ErrorFragment"
+        android:label="error_fragment"
+        tools:layout="@layout/error_fragment" />
+
 
 </navigation>
