Fix sp to dp in confirmation_fragment and confirmed_fragment

--- a/app/src/main/res/layout/confirmed_fragment.xml
+++ b/app/src/main/res/layout/confirmed_fragment.xml
@@ -21,7 +21,8 @@
             android:textAlignment="viewStart"
             android:textAllCaps="false"
             android:textColor="@color/rich_black_80"
-            android:textSize="20sp"
+            android:textSize="20dp"
+            android:clickable="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -100,7 +101,7 @@
             android:text="@string/ok"
             android:textAllCaps="true"
             android:textColor="@color/rich_black_80"
-            android:textSize="17sp"
+            android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBackground"
             app:layout_constraintEnd_toEndOf="@+id/viewBorders"
             app:layout_constraintStart_toStartOf="@+id/viewBorders"
