--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -21,7 +21,8 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,7 +62,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="@+id/viewCalendarBackground"
         app:layout_constraintStart_toStartOf="@+id/viewCalendarBackground"
         app:layout_constraintTop_toTopOf="@+id/viewCalendarBackground" />
@@ -102,7 +103,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewDoctorName" />
 
@@ -131,7 +132,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewHospitalName" />
 
@@ -160,7 +161,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/viewBorders"
         app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
 
@@ -172,7 +173,7 @@
         android:text="@string/confirm"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="17sp"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBackground"
         app:layout_constraintEnd_toEndOf="@+id/viewBorders"
         app:layout_constraintHorizontal_bias="0.5"
@@ -187,7 +188,7 @@
         android:text="@string/cancel"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="17sp"
+        android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="@+id/viewCalendarBackground"
         app:layout_constraintEnd_toStartOf="@+id/buttonConfirmAppointment"
         app:layout_constraintHorizontal_bias="0.5"
