Feat UI improvements (#27)
* Add animations folder
add background with circles in all fragments
add waves svg in home fragment

* Add waves svg in background of home, profile, settings
Fix font sizes, sp to dp

* Fix credits screen

* Fix sp to dp in confirmation_fragment and confirmed_fragment

--- a/app/src/main/res/layout/appointments_fragment.xml
+++ b/app/src/main/res/layout/appointments_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_background"
+    android:background="@drawable/ic_background_group"
     tools:context=".fragments.AppointmentsFragment">
 
 
@@ -22,7 +22,7 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
