--- a/app/src/main/res/layout/calendar_fragment.xml
+++ b/app/src/main/res/layout/calendar_fragment.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/ic_background_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.CalendarFragment"
@@ -22,7 +23,8 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -93,7 +95,7 @@
         android:text="@string/confirm"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:enabled="false"
         app:layout_constraintBottom_toTopOf="@+id/viewCalendarBackground"
         app:layout_constraintEnd_toEndOf="parent"
