--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/ic_background_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.HomeFragment">
@@ -10,7 +11,7 @@
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="230dp"
-        android:background="@color/mandarin_22"
+        android:background="@drawable/ic_rectangles"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +36,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textViewHi"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.484" />
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -66,7 +68,7 @@
                 android:padding="20dp"
                 android:text="@string/past_diagnoses_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
@@ -82,7 +84,7 @@
                 android:padding="20dp"
                 android:text="@string/prescriptions_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
@@ -98,7 +100,7 @@
                 android:padding="20dp"
                 android:text="@string/view_appointments_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
@@ -114,7 +116,7 @@
                 android:padding="20dp"
                 android:text="@string/schedule_appointment_button"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textAlignment="viewStart"
                 android:textAllCaps="false" >
             </Button>
@@ -123,145 +125,7 @@
         </LinearLayout>
 
 
-
-
-
     </ScrollView>
-
-<!--    <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.HomeFragment">
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:background="@color/mandarin_22"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewHi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:text="@string/default_home_greeting"
-        android:textSize="28sp"
-
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_female_avatar"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewHi"
-        app:layout_constraintTop_toTopOf="parent" />
-
-<!-    <LinearLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent">-->
-<!--    <ScrollView-->
-<!--        android:id="@+id/scrollView2"-->
-<!--        android:layout_width="358dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_marginVertical="20dp"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.615"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/view"-->
-<!--        app:layout_constraintVertical_bias="0.1">-->
-
-<!--        <LinearLayout-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:orientation="vertical"-->
-<!--            android:paddingBottom="30dp"-->
-<!--            android:layout_marginVertical="20dp">-->
-
-<!--            <Button-->
-<!--                android:id="@+id/buttonPastDiagnoses"-->
-<!--                android:layout_width="310dp"-->
-<!--                android:layout_height="90dp"-->
-<!--                android:layout_marginVertical="6dp"-->
-<!--                android:layout_marginHorizontal="20dp"-->
-<!--                android:background="@drawable/light_gray_border"-->
-<!--                android:drawableRight="@drawable/ic_past_diagnoses"-->
-<!--                android:paddingHorizontal="20dp"-->
-<!--                android:text="@string/past_diagnoses_button"-->
-<!--                android:textColor="@color/rich_black_80"-->
-<!--                android:textSize="20sp"-->
-<!--                android:textAlignment="viewStart"-->
-<!--                android:textAllCaps="false" >-->
-<!--            </Button>-->
-
-<!--            <Button-->
-<!--                android:id="@+id/buttonPrescriptions"-->
-<!--                android:layout_width="310dp"-->
-<!--                android:layout_height="90dp"-->
-<!--                android:layout_marginVertical="6dp"-->
-<!--                android:layout_marginHorizontal="20dp"-->
-<!--                android:background="@drawable/light_gray_border"-->
-<!--                android:drawableRight="@drawable/ic_prescriptions_list"-->
-<!--                android:padding="20dp"-->
-<!--                android:text="@string/prescriptions_button"-->
-<!--                android:textColor="@color/rich_black_80"-->
-<!--                android:textSize="20sp"-->
-<!--                android:textAlignment="viewStart"-->
-<!--                android:textAllCaps="false" >-->
-<!--            </Button>-->
-
-<!--            <Button-->
-<!--                android:id="@+id/buttonViewAppointments"-->
-<!--                android:layout_width="310dp"-->
-<!--                android:layout_height="90dp"-->
-<!--                android:layout_marginVertical="6dp"-->
-<!--                android:layout_marginHorizontal="20dp"-->
-<!--                android:background="@drawable/light_gray_border"-->
-<!--                android:drawableRight="@drawable/ic_booking"-->
-<!--                android:padding="20dp"-->
-<!--                android:text="@string/view_appointments_button"-->
-<!--                android:textColor="@color/rich_black_80"-->
-<!--                android:textSize="20sp"-->
-<!--                android:textAlignment="viewStart"-->
-<!--                android:textAllCaps="false" >-->
-<!--            </Button>-->
-
-<!--            <Button-->
-<!--                android:id="@+id/buttonScheduleAppointment"-->
-<!--                android:layout_width="310dp"-->
-<!--                android:layout_height="90dp"-->
-<!--                android:layout_marginVertical="6dp"-->
-<!--                android:layout_marginHorizontal="20dp"-->
-<!--                android:background="@drawable/light_gray_border"-->
-<!--                android:drawableRight="@drawable/ic_schedule_appointment"-->
-<!--                android:padding="20dp"-->
-<!--                android:text="@string/schedule_appointment_button"-->
-<!--                android:textColor="@color/rich_black_80"-->
-<!--                android:textSize="20sp"-->
-<!--                android:textAlignment="viewStart"-->
-<!--                android:textAllCaps="false" >-->
-<!--            </Button>-->
-
-
-<!--        </LinearLayout>-->
-
-
-
-
-
-<!--    </ScrollView>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
