--- a/app/src/main/res/layout/prescription_fragment.xml
+++ b/app/src/main/res/layout/prescription_fragment.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/ic_background_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.PrescriptionFragment">
@@ -21,7 +22,8 @@
         android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
+        android:clickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,7 +69,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toTopOf="@+id/LinearLayoutPrescription"
@@ -83,7 +85,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/fullNameDescription" />
@@ -111,7 +113,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
 
@@ -124,7 +126,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewDoctor" />
 
@@ -147,7 +149,7 @@
         android:text="@string/diagnosis"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
-        android:textSize="14sp"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
 
