--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ic_background_group"
     tools:context=".fragments.HomeFragment">
 
     <View
         android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:background="@color/mandarin_22"
+        android:layout_width="405dp"
+        android:layout_height="625dp"
+        android:background="@drawable/ic_rectangles_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +69,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/fullNameDescription"
@@ -81,7 +82,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -108,7 +109,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/amkaDescription"
@@ -121,7 +122,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -148,7 +149,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/bloodTypeDescription"
@@ -161,7 +162,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
@@ -188,7 +189,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="20sp" />
+                    android:textSize="20dp" />
 
                 <TextView
                     android:id="@+id/familyDoctorDescription"
@@ -201,7 +202,7 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/rich_black_80"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
