--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/ic_background_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.HomeFragment">
 
     <View
         android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:background="@color/mandarin_22"
+        android:layout_width="405dp"
+        android:layout_height="621dp"
+        android:background="@drawable/ic_rectangles_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +56,7 @@
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
             <Button
                 android:id="@+id/creditsButton"
@@ -70,7 +71,7 @@
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
             <Button
                 android:id="@+id/logoutButton"
@@ -85,7 +86,7 @@
                 android:textAlignment="viewStart"
                 android:textAllCaps="false"
                 android:textColor="@color/rich_black_80"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
 
         </LinearLayout>
